--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.cloud.gcp.project-id=springboot-311207
 spring.cloud.gcp.credentials.location=file:src/main/resources/service-account.json
- 
+server.port = 8081
